# SDL2_Tetris_Server

./: .gitignore  CMakeLists.txt  LICENSCE.md  README.md  project_formatter.xml
Server/: CMakeLists.txt  Main.cpp
Server/include/: ConnectingPlayerQueue.h  GameRoomManager.h  PlayerManager.h  PlayerService.h  ServerAcceptor.h  ServerGameRoom.h  ServerPlayer.h  ServerWaitingRoom.h  WaitingRoomManager.h
Server/src/: PlayerService.cpp  Quit.cpp  ServerAcceptor.cpp
Server/src/Object/: ServerGameRoom.cpp  ServerPlayer.cpp  ServerWaitingRoom.cpp
Server/src/ObjectManager/: ConnectingPlayerQueue.cpp  GameRoomManager.cpp  PlayerManager.cpp  WaitingRoomManager.cpp
lib/GameInterface/: CMakeLists.txt
lib/GameInterface/include/: Constant.h  Event.h  GameRoom.h  ManagerController.h  ManagerInterface.h  MapSubject.h  Observer.h  Packet.h  PacketQueue.h  Player.h  PlayerConnector.h  Room.h  TStruct.h  Type.h  VectorSubject.h  WaitingRoom.h
lib/GameInterface/src/Object/: Room.cpp  WaitingRoom.cpp
lib/GameInterface/src/Online/: ClientConnector.cpp  ClientService.cpp  Packet.cpp  PacketQueue.cpp  PlayerConnector.cpp
lib/GameInterface/src/SubScription/: ManagerController.cpp
lib/SDL2EasyGUI/include/: SEG_Event.h  SEG_Struct.h
lib/SDL2EasyGUI/src/: GraphicComponent.h
lib/SDL2EasyGUI/src/Control/: Control.h
lib/SDL2EasyGUI/src/Control/Box/: BoxBasic.cpp  BoxBasic.h  ListBox.cpp
lib/SDL2EasyGUI/src/Controller/: Controller.h
lib/SDL2EasyGUI/src/Windows/: DisplayInterface.cpp
lib/Tetris/: CMakeLists.txt
lib/Tetris/include/: TFigureBoard.h  TFigureController.h
lib/Tetris/src/: TFigureController.cpp
src/: Main.cpp
src/GameInterface/: CMakeLists.txt
src/GameInterface/Object/: Atomic.h  GameRoom.cpp  GameRoom.h  Object.cpp  Object.h  Player.cpp  Player.h  Room.cpp  Room.h  WaitingRoom.cpp  WaitingRoom.h
src/GameInterface/Online/: ClientConnector.cpp  ClientConnector.h  ClientService.cpp  ClientService.h  JsonHelper.cpp  JsonHelper.h  ManagerController.h  MessageType.h  Packet.cpp  Packet.h  PacketQueue.cpp  PacketQueue.h
src/GameInterface/SubScription/: ManagerController.cpp  ManagerController.h  ManagerInterface.h  MapSubject.h  Observer.h  Subject.h  SubjectInterface.h  VectorSubject.h
src/Server/: PlayerService.cpp  PlayerService.h  Quit.cpp  Quit.h  ServerAcceptor.cpp
src/Server/Object/: ServerGameRoom.cpp  ServerGameRoom.h  ServerPlayer.cpp  ServerPlayer.h  ServerWaitingRoom.cpp  ServerWaitingRoom.h
src/Server/ObjectManager/: ConnectingPlayerQueue.cpp  ConnectingPlayerQueue.h  GameRoomManager.cpp  GameRoomManager.h  PlayerManager.cpp  PlayerManager.h  WaitingRoomManager.cpp  WaitingRoomManager.h
